# argot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config_array.toml
src/: arg_parser.rs  errors.rs  lib.rs  macros.rs  parser_config.rs  read_config.rs  types.rs  utils.rs
src/arg_parser/: mod.rs  test_arg_parser.rs
src/read_config/: json.rs  mod.rs  toml.rs
tests/: bad_result.json  config_array.json  config_object.json  config_table.toml  test_json.rs  test_parse_result.rs  test_toml.rs
